--- a/学习笔记.md
+++ b/学习笔记.md
@@ -2,7 +2,10 @@
  这处是我学习笔记
  ***
  
-- 创建版本库
+- 在现有的目录中初始化仓库（repository）
 ```shell
 git init
 ```
+> 该命令创建了.git的目录，这个子目录里面包含你初始化GIt仓库中所有文件。
+> 在.git下面有几个文件夹： objects文件夹，ref/heads文件夹和ref/tags文件夹，以及模板文件。
+> 在.git文件夹下面有一个初始化的HEAD文件
