--- a/学习笔记.md
+++ b/学习笔记.md
@@ -15,3 +15,25 @@ git init
 git add 学习笔记.md
 git commit -m "添加版本到版本库"
 ```
+
+- 检查当前文件状态
+```shell
+git status
+```
+> 要看那些文件处于什么状态，用git status命令，如何出现一下情况：
+```shell
+git status
+On branch master
+Your branch is up to date with 'origin/master'.
+
+Changes not staged for commit:
+  (use "git add <file>..." to update what will be committed)
+  (use "git checkout -- <file>..." to discard changes in working directory)
+
+        modified:   "\345\255\246\344\271\240\347\254\224\350\256\260.md"
+
+no changes added to commit (use "git add" and/or "git commit -a")
+```
+> 出现了 Changes not staged for commit，则是说明跟踪的文件发生了变化，但是没有放到暂存区。
+> 要暂存这次更新，则是需要运行 ```git add```命令
+
