--- a/学习笔记.md
+++ b/学习笔记.md
@@ -16,6 +16,7 @@ git add 学习笔记.md
 git commit -m "添加版本到版本库"
 ```
 
+
 - 检查当前文件状态
 ```shell
 git status
@@ -37,3 +38,27 @@ no changes added to commit (use "git add" and/or "git commit -a")
 > 出现了 Changes not staged for commit，则是说明跟踪的文件发生了变化，但是没有放到暂存区。
 > 要暂存这次更新，则是需要运行 ```git add```命令
 
+
+- 查看文件变更
+```shell
+git diff
+```
+
+
+- 提交文件到暂存区
+```shell
+git add <file>
+```
+
+
+- 查看版本日志
+```shell
+git log
+```
+
+
+- 回退到上一个版本
+```shell
+git reset --hard HEAD^
+```
+>  HEAD表示当前版本，上一个版本则为HEAD^，上上个版本则为HEAD^^,上3个版本HEAD~3,上100个版本HEAD~100
