--- a/学习笔记.md
+++ b/学习笔记.md
@@ -1,33 +1,37 @@
- ***
- 此处是我学习笔记
- ***
- 
-- 在现有的目录中初始化版本库（repository）
-```shell
+# 我的学习笔记 #
+---
+## 初始化版本库 ##
+
+
+```
 git init
 ```
-> 该命令创建了.git的目录，这个子目录里面包含你初始化GIt仓库中所有文件。
-> 在.git下面有几个文件夹： objects文件夹，ref/heads文件夹和ref/tags文件夹，以及模板文件。
-> 在.git文件夹下面有一个初始化的HEAD文件
 
-- 添加文件到版本库
-```shell
+该命令是在现有的目录中初始化版本库（repository）,该命令创建了.git的目录，这个子目录里面包含你初始化GIt仓库中所有文件。
+在.git下面有几个文件夹： objects文件夹，ref/heads文件夹和ref/tags文件夹，以及模板文件。
+在.git文件夹下面有一个初始化的HEAD文件
+
+## 添加文件到版本库 ##
+
+```
 git add 学习笔记.md
 git commit -m "添加版本到版本库"
 ```
 
 
-- 检查当前文件状态
-```shell
+## 检查当前文件状态 ##
+```
 git status
 ```
-> 要看那些文件处于什么状态，用git status命令，如何出现一下情况：
-```shell
+
+要看那些文件处于什么状态，用git status命令，如何出现一下情况：
+```
 git status
 On branch master
 Your branch is up to date with 'origin/master'.
 
 Changes not staged for commit:
+
   (use "git add <file>..." to update what will be committed)
   (use "git checkout -- <file>..." to discard changes in working directory)
 
@@ -39,26 +43,29 @@ no changes added to commit (use "git add" and/or "git commit -a")
 > 要暂存这次更新，则是需要运行 ```git add```命令
 
 
-- 查看文件变更
+## 查看文件变更 ##
 ```shell
 git diff
 ```
 
 
-- 提交文件到暂存区
+## 提交文件到暂存区 ##
+
 ```shell
 git add <file>
 ```
 
 
-- 查看版本日志
+## 查看版本日志 ##
 ```shell
 git log
 ```
 
 
-- 回退到上一个版本
+## 回退到上一个版本 ##
+
 ```shell
 git reset --hard HEAD^
 ```
->  HEAD表示当前版本，上一个版本则为HEAD^，上上个版本则为HEAD^^,上3个版本HEAD~3,上100个版本HEAD~100
+
+HEAD表示当前版本，上一个版本则为HEAD^，上上个版本则为HEAD^^,上3个版本HEAD~3,上100个版本HEAD~100
