--- a/学习笔记.md
+++ b/学习笔记.md
@@ -68,4 +68,4 @@ git log
 git reset --hard HEAD^
 ```
 
-HEAD表示当前版本，上一个版本则为HEAD^，上上个版本则为HEAD^^,上3个版本HEAD~3,上100个版本HEAD~100
+HEAD表示当前版本，上一个版本则为HEAD^，上上个版本则为HEAD^^,上3个版本HEAD\~3,上100个版本HEAD\~100
