--- a/学习笔记.md
+++ b/学习笔记.md
@@ -1,4 +1,5 @@
 # 我的学习笔记 #
+
 ---
 ## 初始化版本库 ##
 
@@ -69,3 +70,27 @@ git reset --hard HEAD^
 ```
 
 HEAD表示当前版本，上一个版本则为HEAD^，上上个版本则为HEAD^^,上3个版本HEAD\~3,上100个版本HEAD\~100
+
+## 查看git历史记录 ##
+```
+git log
+```
+
+`git long`是显示从最近到最远的提交日志，如果输出的信息太多，可以增加`--pretty=online`参数，即：
+
+```
+git log --pretty=online
+```
+
+## 查看git的每一条历史
+
+```
+git reflog
+```
+> `git log`和`git reflog`区别是 relog可以查看所有分支的所有操作记录。
+
+## 关于工作区和暂存区 ##
+- 工作区（Working Directory）就是我在电脑上看到的目录。
+
+- 版本库（Repository）是在工作区内隐藏的`.git`文件夹。在GIt的版本库里面存放了很多东西，其中最重要的就是Stage的缓存区。
+-  缓存区（Stage）
